# cfdi

./: README.md  pyproject.toml
scripts/: generar-catalogos-json.py  script.py
src/cfdi/: __init__.py  fields.py  patterns.py  utils.py
src/cfdi/assets/catalogos_json/: aduana.json  clave_prod_serv.json  clave_unidad.json  exportacion.json  forma_pago.json  impuesto.json  meses.json  metodo_pago.json  moneda.json  objeto_imp.json  pais.json  peridiocidad.json  regimen_fiscal.json  tipo_de_comprobante.json  tipo_relacion.json  uso_cfdi.json
src/cfdi/catalogos/: __init__.py  exportacion.py  forma_pago.py  impuesto.py  meses.py  metodo_de_pago.py  moneda.py  objeto_imp.py  pais.py  peridiocidad.py  regimen_fiscal.py  tipo_de_comprobante.py  tipo_factor.py  tipo_relacion.py  uso_cfdi.py
src/cfdi/v33/: __init__.py  base.py  cfdi.py  emisor.py  receptor.py
src/cfdi/v33/concepto/: concepto.py  cuenta_predial.py  informacion_aduanera.py  parte.py
src/cfdi/v33/concepto/impuestos/: impuestos.py  retencion.py  traslado.py
src/cfdi/v33/impuestos/: __init__.py  impuestos.py  retencion.py  traslado.py
src/cfdi/v33/relacionados/: __init__.py  relacionado.py  relacionados.py
src/cfdi/v40/: __init__.py  base.py  cfdi.py  emisor.py  informacion_global.py  pdf.py  receptor.py
src/cfdi/v40/catalogos/: __init__.py  exportacion.py  periodicidad.py
src/cfdi/v40/cfdi_relacionados/: __init__.py  cfdi_relacionado.py  cfdi_relacionados.py
src/cfdi/v40/complemento/: __init__.py  complemento.py  timbre_fiscal_digital.py
src/cfdi/v40/concepto/: __init__.py  a_cuenta_terceros.py  concepto.py  cuenta_predial.py  informacion_aduanera.py  parte.py
src/cfdi/v40/concepto/impuestos/: impuestos.py  retencion.py  traslado.py
src/cfdi/v40/impuestos/: impuestos.py  retencion.py  traslado.py
src/cfdi/v40/pdf/: __init__.py  catalogos.py  pdf.py
tests/: test_cfdi_3.3.py
tests/samples/: megacable.xml
tests/samples/v33/: aerolineas.xml  base.xml  certificado-de-destruccion.xml  comercio-exterior.xml  megacable.xml  min.xml  signed-tfd.xml
tests/samples/v40/: base.xml  min.xml  signed-tfd.xml  uber.xml
tests/test_v33/: test_aerolineas.py  test_megacable.py
tests/test_v40/: test_base.py  test_catalogos.py  test_pdf.py  test_uber.py
